Assignment 5 Openshift Version